fixed align size

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -121,6 +121,7 @@ height: 1000px;
 .alert-req {
     font-size: 1.1rem;
 }
+
 @media only screen and (max-width: 600px) {
     .navbar-brand {
         padding-left: 15px;
@@ -145,10 +146,11 @@ height: 1000px;
         padding-top: 0rem;
     }
     .fas {
-        font-size:30px;
+        font-size:50px;
     }
     .al {
-        padding: 5rem 2.5rem;
+        padding: 5rem 1.99rem;;
+        /* padding: 5rem 2.5rem; */
     }
     .log-title {
         font-size: 12px;
